fixing vertical align issue and decreased font

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -159,6 +159,8 @@ aside {
 //    top:418px;
 //    right:0px;
 //    left:0px;
+    padding-top:3px;
+    padding-bottom:0px;
     display:none;
     text-align:center;
     text-decoration:bold;
@@ -169,12 +171,14 @@ aside {
     height:13vh;
 }
 
+
 .setTime {
     text-align:center;
     background-color:#E65F5C;
-//    opacity:.95;
-    padding-top:30px;
-    padding-bottom:30px;
+    line-height: 13vh;
+    white-space: nowrap;
+    padding-top:3px;
+    padding-bottom:0px;
     display:none;
     position: fixed;
 	bottom: 0;
@@ -188,9 +192,10 @@ aside {
 .intro {
     text-align:center;
     background-color:#E65F5C;
-//    opacity:.95;
-    padding-top:30px;
-    padding-bottom:30px;
+    line-height: 13vh;
+    white-space: nowrap;
+    padding-top:3px;
+    padding-bottom:0px;
     position: fixed;
 	bottom: 0;
 	left: 0;
@@ -211,8 +216,7 @@ aside {
     width:50%;
     border-radius:0;
     height:13vh;
-    font-size:20px;
-
+    font-size:18px;
 }
 
 .date {
